[package]
name = "seven-guis"
version = "0.1.0"
authors = ["Tom Dryer <tomdryer.com@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "counter"
path = "src/counter.rs"

[[bin]]
name = "temperature"
path = "src/temperature.rs"

[[bin]]
name = "flightbooker"
path = "src/flightbooker.rs"

[dependencies]
# TODO: Wait for 0.14.2 release
# fltk = "0.14.1"
fltk = { path = "../fltk-rs/fltk" }
chrono = "0.4"
